# automated-research-generator

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt  users.db
generated_report/Early_Career_Software_Professionals_pushed_out_of_workforce_by_AI_20260227_153806/: Early_Career_Software_Professionals_pushed_out_of_workforce_by_AI_20260227_153806.docx
generated_report/GenAI_in_software_development_20260227_153014/: GenAI_in_software_development_20260227_153014.docx
generated_report/GenAI_in_software_development_20260227_153359/: GenAI_in_software_development_20260227_153359.docx
generated_report/Impact_of_LLMs_over_the_Future_of_Jobs__20260225_161246/: Impact_of_LLMs_over_the_Future_of_Jobs__20260225_161246.docx
generated_reports/: AI_in_sports_analytics_20260219_210819.docx  The_realistic_impact_of_AI_in_education_of_people_with_autism_20260219_212548.docx
research_and_analysis/api/: main.py
research_and_analysis/api/models/: request_models.py
research_and_analysis/api/routes/: report_routes.py
research_and_analysis/api/services/: report_service.py
research_and_analysis/backend_server/: workflow.py
research_and_analysis/config/: configuration.yaml
research_and_analysis/database/: db_config.py
research_and_analysis/notebook/: test.ipynb
research_and_analysis/prompt_lib/: prompt_locator.py  prompts.py
research_and_analysis/workflows/: interview_workflow.py  report_generator_workflow.py
