[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[project]
name = "automated-research-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "ipykernel>=6.31.0",
    "jinja2>=3.1.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langgraph>=0.6.11",
    "passlib>=1.7.4",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.9",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "tavily-python>=0.7.19",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["research_and_analysis"]
include = ["AUTOMATED-RESEARCH-GENERATOR*"]

